--- a/pagina/index.html
+++ b/pagina/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <header></header>
+        <header>
+            <img src="menuhamburguesa.png" alt="">
+        </header>
     </main>
 </body>
 </html>
