--- a/pagina/index.html
+++ b/pagina/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <header>
+        <header class="clasheader">
             <img src="menuhamburguesa.png" alt="">
         </header>
     </main>
