--- a/pagina/index.html
+++ b/pagina/index.html
@@ -11,6 +11,11 @@
     <main>
         <header class="clasheader">
             <img src="menuhamburguesa.png" alt="">
+            <div>
+                <p><link rel="stylesheet" href="index.html">INICIO</p>
+                <p><link rel="stylesheet" href="">MISION</p>
+                <P><link rel="stylesheet" href="">VISION</P>
+            </div>
         </header>
     </main>
 </body>
