--- a/pagina/index.html
+++ b/pagina/index.html
@@ -12,9 +12,9 @@
         <header class="clasheader">
             <img src="menuhamburguesa.png" alt="">
             <div>
-                <p><link rel="stylesheet" href="index.html">INICIO</p>
-                <p><link rel="stylesheet" href="">MISION</p>
-                <P><link rel="stylesheet" href="">VISION</P>
+                <li><link rel="stylesheet" href="index.html">INICIO</li>
+                <li><link rel="stylesheet" href="">MISION</li>
+                <li><link rel="stylesheet" href="">VISION</li>
             </div>
         </header>
     </main>
